# firework-observer

./: .gitignore  AGENTS.md  GPT_HANDOFF.md  PROJECT_INIT.md  README.ja.md  README.md  index.html  main.py  project_brief.json  pyproject.toml
.codex/: README.md  config.toml
docs/adr/: 0001-use-src-layout.md  0002-single-pyxel-run-boundary.md  0003-deterministic-simulation-first.md  0004-public-safety-path-check.md
docs/architecture/: ARCHITECTURE_COMPASS.md  ASSET_POLICY.md  LOOP_BOUNDARY.md  PERFORMANCE_BUDGET.md  PREVIEW_TO_RUNTIME_INTEGRATION.md  PROTOTYPE_RECONCILIATION.md  RENDERING_RULES.md  SCENERY_OBJECTS.md  SCENE_POLICY.md  SCREEN_PROFILES.md
docs/plans/: PLANS.md
docs/product/: GAME_BRIEF.md  GAME_DESIGN.md  NON_GOALS.md  NORTH_STAR.md  PLAYER_EXPERIENCE.md  QUESTIONNAIRE.md  USER_FEEDBACK_LOOP.md
docs/prompts/: goal_driven_mode.md  initialize_from_hearing.md  release_template.md  review_template.md  task_template.md
docs/release/: build_checklist.md  itch_io_notes.md  public_release_checklist.md
docs/research/: external_firework_candidates_20260625.md  external_firework_reference.md  runtime_parity_review_20260626.md  visual_tuning_checklist.md
examples/: minimal_particle_demo.py
goals/: GOAL_STATE.md  decision_log.md  done_log.md  roadmap.md  task_queue.json
sandbox/: README.md
scripts/: build_html.py  build_pyxapp.py  build_web_release.py  capture_smoke.py  check_all.py  check_public_safety.py  dev_run.py  disable_pyxel_web_gamepad.py  init_from_brief.py  new_task.py  run_runtime_app.py
tools/: preview_firework_box.py
(+97 files in other folders)
